[gd_scene load_steps=63 format=3 uid="uid://caqmnp7bf1gif"]

[ext_resource type="Script" uid="uid://bcesqw6rgxl3k" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://u8j6ppi73j3g" path="res://characters/player.png" id="2_i3pqv"]
[ext_resource type="PackedScene" uid="uid://cy668lncvxgla" path="res://scene/death.tscn" id="3_fvtld"]
[ext_resource type="Script" uid="uid://yf2trnb6g84j" path="res://scripts/push_area.gd" id="4_ct4mp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("2_i3pqv")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("2_i3pqv")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("2_i3pqv")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("2_i3pqv")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("2_i3pqv")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("2_i3pqv")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_76oay"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"back_ATK",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}],
"loop": true,
"name": &"front_ATK",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}],
"loop": true,
"name": &"side_ATK",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hjaqi"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fvtld"]
radius = 12.0

[sub_resource type="Animation" id="Animation_ct4mp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fvtld"]
resource_name = "death_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [0.0, 1.39626]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.929412, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s4jxa"]
_data = {
&"RESET": SubResource("Animation_ct4mp"),
&"death_animation": SubResource("Animation_fvtld")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ct4mp"]
radius = 6.0
height = 16.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_76oay")
animation = &"front_idle"
autoplay = "front_idle"
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hjaqi")

[node name="playerHurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerHurtbox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_fvtld")

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.8

[node name="death" parent="." instance=ExtResource("3_fvtld")]
visible = false

[node name="death_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s4jxa")
}

[node name="pushArea" type="Area2D" parent="."]
script = ExtResource("4_ct4mp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pushArea"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_ct4mp")
debug_color = Color(0, 0.6, 0.16470589, 0.41960785)

[connection signal="body_entered" from="playerHurtbox" to="." method="_on_player_hurtbox_body_entered"]
[connection signal="body_exited" from="playerHurtbox" to="." method="_on_player_hurtbox_body_exited"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="animation_finished" from="death_animation" to="." method="_on_death_animation_animation_finished"]
